argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - workflows.apps.argoproj.io
    secretName: argo-workflows-secret
  rules:
  - host: argo.local.test
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argo-server
            port:
              number: 2746
